--- a/css/style.css
+++ b/css/style.css
@@ -1,156 +1,308 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #F0F8FF;
+  background-color: #F0F8FF;
 }
 
-/*Estilos del header boostrap*/
-.bg-martin{
-    background-color: #a3d4ff;
+.nav-cuotas {
+  background-color: #526A80;
 }
-.logo img{
-    padding: 30px;
-    width: 150px;
-}
-
-.signos {
-    display: flex;
-    padding: 20px;
-    width: auto;
+.nav-cuotas p {
+  margin-bottom: 0;
+  text-align: center;
 }
 
-.carrito img {
-    padding-right: 20px;
-    width: 60px;
+.bg-martin {
+  background-color: #a3d4ff;
+}
+.bg-martin .container-fluid .logo img {
+  padding: 0px 25px;
+  width: 150px;
+}
+.bg-martin div {
+  justify-content: space-around;
+}
+.bg-martin div ul li a {
+  transition: 1s;
+}
+.bg-martin div ul li a:hover {
+  color: #F0F8FF;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.bg-martin .signos {
+  display: flex;
+  padding: 20px;
+  width: auto;
+}
+.bg-martin .signos .carrito img {
+  padding-right: 20px;
+  width: 60px;
+}
+.bg-martin .signos .corazon img {
+  padding-right: 20px;
+  width: 70px;
 }
 
-.corazon img {
-    padding-right: 20px;
-    width: 70px;
-}
-.bg-martin div ul li a{
-    color: #526A80;
-    text-decoration: none;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 30px;
-}
-
-.bg-martin div ul li a:hover{
-    color: #F0F8FF;
-}
-
-/*Estilos main*/
 main section {
-    margin: 50px ;
-    text-align: center;
-
+  margin: 50px;
+  text-align: center;
 }
+main section .grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 50px;
+  margin: 0 auto;
+  max-width: 1920px;
+}
+main .bannersecundario img {
+  padding: 0 100px;
+  width: 100%;
+}
+main .banner2 img {
+  width: 100%;
+}
+main .icono-wpp a img {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 80px;
+  transition: 1s;
+}
+main .icono-wpp a img:hover {
+  transform: rotate(40deg);
+  width: 100px;
+}
+main .contactos p {
+  display: flex;
+  justify-content: center;
+}
+main .contactos .formcontactos {
+  padding: 0 50px;
+}
+main .direcciones-contactos {
+  padding-top: 20px;
+  text-align: center;
+}
+
+footer .sub-text p {
+  padding-top: 50px;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 20px;
+  color: #526A80;
+}
+footer .footer-content {
+  display: flex;
+  justify-content: center;
+}
+footer .footer-content input[type=text] {
+  justify-content: center;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+}
+
+/*componentes*/
+section {
+  padding: 0 20px;
+}
+section .card {
+  background-color: #F0F8FF;
+  border: none;
+}
+section .card img {
+  width: 100%;
+  padding: 5px;
+}
+section .card img:hover {
+  border: 3px solid #526A80;
+  border-radius: 5px;
+  padding: 0%;
+}
+section .card .card-content {
+  padding: 20px;
+  color: #526A80;
+}
+section .card .card-content h2 {
+  margin-top: 0;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 20px;
+  text-align: center;
+}
+section .card .card-content p {
+  margin-bottom: 0;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 20px;
+}
+section .card .card-content p span {
+  text-decoration: line-through;
+  color: #A3D4FF;
+}
+
+/*Variables*/
+main .card-content {
+  margin: 10px;
+}
+main .card-content .button {
+  background-color: #A3D4FF;
+  color: #526A80;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 4px 2px;
+  border-radius: 5px;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  border-color: #526A80;
+}
+main .card-content .button:hover {
+  color: #F0F8FF;
+  background-color: #526A80;
+}
+main .buttonenviar {
+  background-color: #A3D4FF;
+  color: #526A80;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 4px 2px;
+  border-radius: 5px;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  border-color: #526A80;
+}
+main .buttonenviar:hover {
+  color: #F0F8FF;
+  background-color: #526A80;
+}
+main .direcciones-contactos p {
+  text-align: center;
+  color: #526A80;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.footer-content {
+  margin: 100px;
+}
+.footer-content button {
+  background-color: #A3D4FF;
+  color: #526A80;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.footer-content button:hover {
+  background-color: #526A80;
+  color: #F0F8FF;
+}
+
+.nav-cuotas p {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 20px;
+  color: #F0F8FF;
+}
+
+.bg-martin div ul li a {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 30px;
+  color: #526A80;
+}
+
 main section p {
-    color: #526A80;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 50px;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 50px;
+  color: #526A80;
 }
-/*tarjetas*/
-section{
-    padding: 0 20px;
+main .contactos p {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 30px;
+  color: #526A80;
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 50px;
-    margin: 0 auto;
-    max-width: 1920px;
+main .contactos .formcontactos .form-label {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 25px;
+  color: #526A80;
+}
+main .direcciones-contactos {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 15px;
+  color: #526A80;
 }
 
-.card {
-    background-color: #F0F8FF;
- 
+footer .pie {
+  text-align: center;
+}
+footer .pie p {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 20px;
+  color: #526A80;
 }
 
-.card img {
+/*medias queries*/
+@media screen and (max-width: 425px) {
+  .bg-martin .signos {
+    display: none;
+  }
+  .carousel-inner {
+    display: none;
+  }
+  main .bannersecundario img {
+    padding: 0%;
     width: 100%;
-    padding: 5px;
-    
+  }
+  main section {
+    padding: 0%;
+  }
+  main .contactos {
+    display: none;
+  }
+  main .icono-wpp a img {
+    display: none;
+  }
 }
-
-.card-content {
-    padding: 20px;
-    color: #526A80;
-}
-
-.card-content h2 {
-    margin-top: 0;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 25px;
-    text-align: center;
-
-}
-
-.card-content p {
-    margin-bottom: 0;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 20px;
-}
-.card-content p span{
-    text-decoration: line-through;
-    color: #A3D4FF;
-
-}
-
-/*Estilos boton*/
-
-.button {
-    background-color: #A3D4FF;
-    color: #526A80;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    margin: 4px 2px;
-   
-    border-radius: 5px;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    border-color: #526A80;
-}
-.button:hover{
-    color: #A3D4FF;
-    background-color: #526A80;
-
-}
-
-.card-content button {
-    margin: 10px ;
-}
-/*seccion baner*/
-
-section img{
+@media screen and (max-width: 768px) {
+  .bg-martin .signos {
+    display: none;
+  }
+  .carousel-inner {
+    display: none;
+  }
+  main .bannersecundario img {
+    padding: 0%;
     width: 100%;
+  }
 }
-legend{
-    text-align: center;
-    padding: 30px;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
-/*Footer*/
-footer p {
-    text-align: center;
-    padding: 30px;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
+
+/*# sourceMappingURL=style.css.map */
