--- a/scss/medias-queries/_media-mobile.scss
+++ b/scss/medias-queries/_media-mobile.scss
@@ -28,4 +28,11 @@
             }
         }
     }
+    footer {
+        .footer-content2 {
+            .text p{
+                font-size: 12px;
+            }
+        }
+    }
 }  
