--- a/scss/components/_botones.scss
+++ b/scss/components/_botones.scss
@@ -1,7 +1,7 @@
 /*Variables*/
-$colorceleste:#A3D4FF;
-$colornegro:#526A80;
-$colorblanco:#F0F8FF;
+$colorceleste: #A3D4FF;
+$colornegro: #526A80;
+$colorblanco: #F0F8FF;
 
 main {
     .card-content {
@@ -13,7 +13,7 @@ main {
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 15px;
             margin: 4px 2px;
 
             border-radius: 5px;
@@ -29,44 +29,38 @@ main {
         }
     }
 
-    .buttonenviar {
-        background-color: $colorceleste;
-        color:$colornegro;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        font-size: 20px;
-        margin: 4px 2px;
 
-        border-radius: 5px;
-        font-family: "Nunito", sans-serif;
-        font-optical-sizing: auto;
-        font-style: normal;
-        border-color: #526A80;
+    .comment-form{
+        button {
+            background-color: $colorceleste;
+            color: $colornegro;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            font-size: 20px;
+            margin: 4px 2px;
 
-        &:hover {
-            color:$colorblanco;
-            background-color: $colornegro;
+            border-radius: 5px;
+            font-family: "Nunito", sans-serif;
+            font-optical-sizing: auto;
+            font-style: normal;
+            border-color: #526A80;
+
+            &:hover {
+                color: $colorblanco;
+                background-color: $colornegro;
+            }
         }
 
     }
 
-    .direcciones-contactos p {
-
-        text-align: center;
-        color: $colornegro;
-        font-family: "Nunito", sans-serif;
-        font-optical-sizing: auto;
-        font-style: normal;
-
-    }
 }
 
 .footer-content {
     margin: 100px;
 
     button {
-        background-color:$colorceleste;
+        background-color: $colorceleste;
         color: $colornegro;
         padding: 8px 16px;
         border: none;
