--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,9 +1,12 @@
 footer {
-    
+
+
+
 
     .sub-text {
         p {
-            padding-top: 50px;
+            margin: 0;
+            padding-top: 30px;
             text-align: center;
             font-family: "Nunito", sans-serif;
             font-optical-sizing: auto;
@@ -17,11 +20,12 @@ footer {
     .footer-content {
         display: flex;
         justify-content: center;
+        margin: 50px;
 
         input[type="text"] {
             justify-content: center;
 
-            padding: 8px;
+            padding: 5px;
             border-radius: 4px;
             border: none;
 
@@ -29,5 +33,32 @@ footer {
 
     }
 
-   
+    .footer-content2 {
+        .enlaces {
+            li {
+                list-style: none;
+                display: flex;
+                justify-content: space-around;
+                padding: 0 15px;
+               
+
+                a {
+                    text-decoration: none;
+
+                    &:hover{
+                       
+                        color: #1A2128;
+                    }
+
+                }
+            }
+        }
+
+        .text {
+            text-align: center;
+            width: 100%;
+            padding: 15px 0;
+            border-top: #789BBB 1px solid;
+        }
+    }
 }
