--- a/scss/medias-queries/_media-desktop.scss
+++ b/scss/medias-queries/_media-desktop.scss
@@ -1,4 +1,9 @@
-@media screen and (max-width: 1024px) {
-   
+@media screen and (min-width: 1024px) {
 
+    .navbar-nav {
+
+        .nav-link {
+            font-size: 24px;
+        }
+    }
 }
